--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.liu.asus.yikezhong.MainActivity">
-<android.support.v4.widget.DrawerLayout
+    tools:context="com.liu.asus.yikezhong.MainActivity"
     android:id="@+id/dw"
+    android:background="#fff"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_gravity="left"
-        android:background="#f00"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </RelativeLayout>
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -32,7 +22,6 @@
             android:layout_alignParentStart="true"
             android:layout_above="@+id/linearlaout"
             android:layout_below="@+id/include">
-
         </FrameLayout>
         <LinearLayout
             android:id="@+id/linearlaout"
@@ -99,9 +88,17 @@
             </LinearLayout>
         </LinearLayout>
     </RelativeLayout>
+    <FrameLayout
+        android:clickable="true"
+        android:background="#ffffff"
+        android:layout_gravity="start"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/frame_left"
+        ></FrameLayout>
 
 
 
 </android.support.v4.widget.DrawerLayout>
 
-</RelativeLayout>
+
