--- a/app/src/main/res/layout/duanzi.xml
+++ b/app/src/main/res/layout/duanzi.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_height="1620px">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="1620px">
+<com.jcodecraeer.xrecyclerview.XRecyclerView
+    android:id="@+id/recycle"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+</com.jcodecraeer.xrecyclerview.XRecyclerView>
 
 
-
-
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
