--- a/app/src/main/res/layout/duanzi.xml
+++ b/app/src/main/res/layout/duanzi.xml
@@ -3,16 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:layout_height="1620px">
+    android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="1620px">
+        android:layout_height="wrap_content">
 <com.jcodecraeer.xrecyclerview.XRecyclerView
     android:id="@+id/recycle"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 </com.jcodecraeer.xrecyclerview.XRecyclerView>
-
-
     </RelativeLayout>
 </LinearLayout>
