--- a/app/src/main/res/layout/headerlayout.xml
+++ b/app/src/main/res/layout/headerlayout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#03A9F4"
     android:layout_width="match_parent"
     android:layout_height="140px">
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
+        app:roundAsCircle="true"
         android:padding="20px"
         android:layout_width="200px"
         android:src="@mipmap/ic_launcher_round"
