--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="160px">
             <LinearLayout
+                android:id="@+id/line_tuijian"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_width="0dp"
@@ -50,6 +51,7 @@
                     />
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/line_duanzi"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_width="0dp"
@@ -69,6 +71,7 @@
                     />
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/line_shiping"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_width="0dp"
