--- a/app/src/main/res/layout-v21/duanzi_item.xml
+++ b/app/src/main/res/layout-v21/duanzi_item.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="10dp"
+    android:background="?android:attr/selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 <RelativeLayout
@@ -122,6 +123,7 @@
         android:id="@+id/item_recycle"
         android:layout_below="@+id/duanzi_tv_content"
         android:layout_width="match_parent"
+        android:background="?android:attr/selectableItemBackground"
         android:layout_height="wrap_content">
     </android.support.v7.widget.RecyclerView>
     <View
