--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorqq">#18ACFC</color>
     <color name="colorweixin">#4DBF4D</color>
     <color name="colorziti">#BBBBBB</color>
+    <color name="status">#03A9F4</color>
 </resources>
