--- a/app/src/main/res/layout/activity_faduanzi.xml
+++ b/app/src/main/res/layout/activity_faduanzi.xml
@@ -51,7 +51,7 @@
     </RelativeLayout>
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="500px"
+        android:layout_height="400px"
         android:textSize="15sp"
         android:maxLines="5"
         android:layout_alignParentLeft="true"
@@ -64,6 +64,7 @@
         android:id="@+id/ed_fabiao" />
 
     <ImageView
+        android:id="@+id/img_add"
         android:layout_width="250px"
         android:layout_height="250px"
         android:layout_alignParentLeft="true"
@@ -72,5 +73,12 @@
         android:src="@drawable/add"
         android:layout_marginLeft="50px"/>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/img_add"></android.support.v7.widget.RecyclerView>
 </RelativeLayout>
 </LinearLayout>
