--- a/app/src/main/res/layout/headerlayout.xml
+++ b/app/src/main/res/layout/headerlayout.xml
@@ -4,12 +4,12 @@
     android:background="#03A9F4"
     android:layout_width="match_parent"
     android:layout_height="140px">
-    <com.facebook.drawee.view.SimpleDraweeView
-        app:roundAsCircle="true"
-        android:padding="20px"
-        android:layout_width="200px"
+    <com.meg7.widget.CircleImageView
+        android:layout_marginLeft="40px"
+        android:layout_width="110px"
         android:src="@mipmap/ic_launcher_round"
-        android:layout_height="match_parent"
+        android:layout_height="100px"
+        android:layout_centerVertical="true"
         android:id="@+id/img_icon" />
 
     <TextView
