--- a/app/src/main/res/layout/tuijian.xml
+++ b/app/src/main/res/layout/tuijian.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:clickable="true"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="1620px">
@@ -52,13 +51,22 @@
             android:layout_height="10px"></View>
     </RelativeLayout>
 
-    <FrameLayout
-        android:id="@+id/frame_tuijian"
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:id="@+id/xlist_tuijian"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/rela_remen">
-    </FrameLayout>
+    </com.jcodecraeer.xrecyclerview.XRecyclerView>
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:visibility="gone"
+        android:id="@+id/xlist_guanzhu"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/rela_remen">
+    </com.jcodecraeer.xrecyclerview.XRecyclerView>
 
 </RelativeLayout>
