--- a/app/src/main/res/layout/xbanner.xml
+++ b/app/src/main/res/layout/xbanner.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="420px">
+    <com.stx.xhb.xbanner.XBanner
+        android:id="@+id/banner"
+        android:layout_width="match_parent"
+        android:layout_height="400px"
+        app:AutoPlayTime="3000"
+        >
+    </com.stx.xhb.xbanner.XBanner>
 
 
 
