--- a/app/src/main/res/layout/image1.xml
+++ b/app/src/main/res/layout/image1.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    >
     <ImageView
+        android:padding="30px"
         android:id="@+id/image"
-        android:layout_marginLeft="30px"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="700px"
         android:contentDescription="@null"
-        android:layout_marginRight="30px"
         />
 
 
