--- a/app/src/main/res/layout/image2.xml
+++ b/app/src/main/res/layout/image2.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -9,7 +11,7 @@
         android:id="@+id/image"
         android:layout_width="525px"
         android:scaleType="fitXY"
-        android:layout_height="wrap_content"
+        android:layout_height="600px"
         android:contentDescription="@null"
         android:layout_marginRight="10px"
         android:layout_marginLeft="5px"
