--- a/app/src/main/res/layout/imagelse.xml
+++ b/app/src/main/res/layout/imagelse.xml
@@ -2,10 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    >
 
     <ImageView
-
         android:layout_marginTop="10px"
         android:scaleType="fitXY"
         android:id="@+id/image"
@@ -14,6 +17,7 @@
         android:layout_height="320px"
         android:contentDescription="@null"
         android:layout_marginRight="30px"
+
         />
 
 
