--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
        <!-- <item name="android:windowBackground">@drawable/start</item>-->
         <item name="android:windowIsTranslucent">true</item>
-        <item name="android:colorControlHighlight">@color/colorPrimary</item>
-        <item name="android:navigationBarColor">@color/navigationBarColor</item>
+        <item name="android:windowAnimationStyle">@style/MyWindowAnimTheme</item>
+    </style>
+    <style name="MyWindowAnimTheme">
+        <item name="android:activityOpenEnterAnimation">@anim/top_to_bottom_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/top_to_bottom_out</item>
     </style>
 
 </resources>
