--- a/app/src/main/res/layout/duanzi.xml
+++ b/app/src/main/res/layout/duanzi.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_height="wrap_content">
             <com.jcodecraeer.xrecyclerview.XRecyclerView
+                android:cacheColorHint="#00000000"
                 android:id="@+id/recycle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
