--- a/app/src/main/res/layout/tuijian.xml
+++ b/app/src/main/res/layout/tuijian.xml
@@ -52,6 +52,7 @@
     </RelativeLayout>
 
     <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:cacheColorHint="#00000000"
         android:id="@+id/xlist_tuijian"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -61,6 +62,7 @@
     </com.jcodecraeer.xrecyclerview.XRecyclerView>
     <com.jcodecraeer.xrecyclerview.XRecyclerView
         android:visibility="gone"
+        android:cacheColorHint="#00000000"
         android:id="@+id/xlist_guanzhu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
