--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -10,5 +10,12 @@
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:colorControlHighlight">@color/colorPrimary</item>
         <item name="android:navigationBarColor">@color/yancy_blue500</item>
+        <item name="android:windowAnimationStyle">@style/MyWindowAnimTheme</item>
+    </style>
+
+
+    <style name="MyWindowAnimTheme">
+        <item name="android:activityOpenEnterAnimation">@anim/top_to_bottom_in</item>
+        <item name="android:activityOpenExitAnimation">@anim/top_to_bottom_out</item>
     </style>
 </resources>
