--- a/app/src/main/res/layout/shiping.xml
+++ b/app/src/main/res/layout/shiping.xml
@@ -51,6 +51,14 @@
             android:layout_width="match_parent"
             android:layout_height="10px"></View>
     </RelativeLayout>
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:layout_below="@+id/rela_remen"
+        android:id="@+id/sp_remen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+    </com.jcodecraeer.xrecyclerview.XRecyclerView>
 
 
 
