--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorweixin">#4DBF4D</color>
     <color name="colorziti">#BBBBBB</color>
     <color name="status">#03A9F4</color>
+    <color name="lavender">#e6e6fa</color>
 </resources>
