--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,17 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
        <!-- <item name="android:windowBackground">@drawable/start</item>-->
-        <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowAnimationStyle">@style/MyWindowAnimTheme</item>
+    </style>
+
+
+    <style name="NoTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <!-- <item name="android:windowBackground">@drawable/start</item>-->
+        <item name="android:windowIsTranslucent">true</item>
     </style>
     <style name="MyWindowAnimTheme">
         <item name="android:activityOpenEnterAnimation">@anim/top_to_bottom_in</item>
