--- a/app/src/main/res/layout/userheader.xml
+++ b/app/src/main/res/layout/userheader.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
     <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="680px"
         >
@@ -89,7 +90,8 @@
                 android:background="@drawable/user_bg"
                 android:gravity="center"
                 android:text="+关注"
-                android:textColor="#03A9F4" />
+                android:textColor="#03A9F4"
+                />
 
             <LinearLayout
                 android:id="@+id/ll"
@@ -114,6 +116,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/tv_zuopin_size"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
@@ -132,10 +135,12 @@
         </RelativeLayout>
 
 
-        <com.yalantis.ucrop.view.CropImageView
+        <com.meg7.widget.CircleImageView
             android:id="@+id/ro_user"
             android:layout_width="160px"
-            android:layout_height="160px"
+            android:layout_height="150px"
+
+            app:roundAsCircle="true"
             android:layout_alignBottom="@+id/relativeLayout12"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
